Thu Jun 11 13:15:09 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks6.3.GNU:
          Use $(HOST_EXE_EXT) when host_root is set

        * include/makeinclude/platform_cegcc.GNU:
          Set qos to 1 and updated header

Wed Jun 10 18:18:09 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-9.h:
        * ace/OS_NS_stdio.inl:
          Fix for Windows CE with msvc9

Wed Jun 10 14:07:09 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/platform_vxworks6.3.GNU:

          Minor adjustment to the part of the change below concerning
          "Allow in-place (no HOST_ROOT) cross-compilation on Win32 hosts."
          If the host tool variables (like $(TAO_IDL)) are already end in .exe
          don't add .exe again.

Mon Jun  8 18:39:58 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * ace/Message_Queue_Vx.h:
        * ace/OS_main.h:

          Added ACE_Export to ACE_Message_Queue_Vx.
          Added "exports" for the symbols ace_os_main_i and ace_main_i.
          This allows them to work with GCC 4.x hidden visibility on platforms
          that use redefinition of main (VxWorks).

        * contrib/minizip/minizip.mwc:

          Added a workspace so minizip will be "found" when running
          mwc.pl -recurse.

        * include/makeinclude/platform_lynxos.GNU:
        * include/makeinclude/platform_vxworks6.3.GNU:

          Both VxWorks and LynxOS:
          For shared library builds (RTP), use -rpath-link to silence
          warnings from the linker.  We assume the libraries in $ACE_ROOT/lib
          will be present at runtime.

          VxWorks only:
          Allow in-place (no HOST_ROOT) cross-compilation on Win32 hosts.

        * include/makeinclude/platform_sunos5_sunc++.GNU:

          Default "distrib" to 1, which means we will not set RPATH, similar to
          other platforms.  This resolves bug #3678.
